# Multithreaded-File-Compressor

./: CMakeLists.txt  README.md
src/: comp.cpp  comp.hpp  decomp.cpp  decomp.hpp  main.cpp
